--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -3,6 +3,11 @@ play.i18n.langs=[ "en" ]
 
 play.http.secret.key="U3spB5^7L;EK_:<=OKxwpOJGM:0JsAyTu2pWhKsqbiGMO@tT_8voDNs:x7q=x?e<"
 
+play.assets {
+  path = "/public"
+  urlPrefix = "/assets"
+}
+
 
 #play.http.filters = "Filters"
 play.filters.headers.frameOptions = null
